# polar

./: .coderabbit.yaml  .editorconfig  .env.production.example  .gitattributes  .gitignore  .terraformignore  .tool-versions  .vercelignore  2  :w  AGENTPAY_CLEANUP_LOG.md  AGENTPAY_COMPLETE_SUMMARY.md  AGENTPAY_IMPLEMENTATION_PLAN.md  AGENTPAY_MODULE_STRUCTURE.md  AGENTPAY_MVP_PLAN.md  AGENTPAY_POLAR_ANALYSIS.md  AGENTS.md  BUSINESS_MODEL_DEPLOYMENT.md  Brewfile  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPARISON.md  DEVELOPMENT.md  LICENSE  LLM_COST_BENEFIT_ANALYSIS.md  MERCHANT_ONBOARDING.md  MONITORING_SETUP.md  Makefile  ORGANIZATION_REVIEWS_ANALYSIS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  PR_DESCRIPTION.md  README.md  README_AGENTPAY.md  SECURITY.md  STRIPE_INTEGRATION.md  STRIPE_SETUP_GUIDE.md  (+24 more)
docs/: DEPLOYMENT.md  README.md  account-reviews.mdx  docs.json  faq.mdx  generate_requirements.sh  introduction.mdx  migrate-away.mdx  migrate.mdx  mkdocs.insiders.yml  mkdocs.yml  openapi.json  openapi.yaml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  style.css  support.mdx  update-schema.sh  vercel.json
docs/.polar/: generate-webhooks.mts  webhooks.sh
docs/.speakeasy/: workflow.yaml
docs/adr/: 001-build-on-polar-foundation.md  002-hybrid-intent-classification.md  003-tool-registry-pattern.md  004-pgvector-for-rag.md  005-multi-agent-architecture.md
docs/api-reference/: introduction.mdx  rate-limits.mdx
docs/changelog/: 2024-10-10-to-2024-10-17.md  api.mdx  recent.mdx
docs/docs/: .pages  api.md  dev.md  github-action.md  index.md  payment.md  support.md
docs/features/: analytics.mdx  custom-fields.mdx  customer-management.mdx  customer-portal.mdx  discounts.mdx  dunning-and-retries.md  orders.mdx  products.mdx  refunds.mdx  seat-based-pricing.mdx  sso.mdx  tax-inclusive-pricing.mdx  team-management.mdx  trials.mdx
docs/guides/: allow-multiple-subscriptions-per-customer.mdx  automate-post-purchase-link-sharing.mdx  change-email-as-merchant.mdx  convex.mdx  create-checkout-session.mdx  create-multiple-organizations.mdx  create-variants.mdx  custom-benefit.mdx  customize-benefits-order-in-checkouts.mdx  customize-product-display-order-in-checkout.mdx  customize-products-order-in-checkouts.mdx  disable-email-editing-in-checkout.mdx  disable-price-changes-by-customer.mdx  downgrades.mdx  enable-multiple-subscription.mdx  encore.mdx  expiring-one-time-purchases.mdx  grant-meter-credits-after-purchase.mdx  grant-meter-credits-before-purchase.mdx  introduction.mdx  laravel.mdx  migrate-seat-based-to-member-model.mdx  nextjs.mdx  proration-for-subscription-changes.mdx  proration.mdx  schedule-subscription-downgrades-qstash.mdx  seat-based-pricing.mdx  subscription-cancellation-webhooks.mdx  subscription-downgrades.mdx  subscription-upgrades.mdx  theme-switch-in-checkout.mdx  upgrades.mdx  variants.mdx
docs/help-center/: checkout.mdx  customer-portal.mdx  introduction.mdx  subscriptions.mdx
docs/integrate/: authentication.mdx  coding-agents.mdx  customer-state.mdx  mcp.mdx  oat.mdx  refgrow.mdx  sandbox.mdx
docs/merchant-of-record/: acceptable-use.mdx  account-reviews.mdx  fees.mdx  introduction.mdx  supported-countries.mdx  tax.mdx
docs/prd/: fixed-fee-seat-based-composition.md
docs/snippets/: zapier-embed.mdx
e2e/: README.md  pyproject.toml  run.sh
e2e/.zed/: settings.json
e2e/tests/: test_sample.py
lambda/image-resizer/: handler.py  pyproject.toml
sdk/generator/: .gitignore  AGENTS.md  README.md  cli.py  justfile  pyproject.toml
server/: .dockerignore  .env.devcontainer  .env.template  .env.testing  .gitignore  .jwks.production.json  .mypy_worker.2ba1c5a8.0.json  .mypy_worker.2ba1c5a8.1.json  .oxfmtrc.json  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  CHECKOUT_LINKS_BACKOFFICE.md  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.playwright  Dockerfile.prod  Makefile  README.md  alembic.ini  checkout_order_flow_diagram.md  docker-compose.yml  fly.review.toml  init-readonly-user.sql  monthly_recurring_gtv.sql  pyproject.toml  ruff.vscode.toml  run_worker.py  scheduler.py  supervisord.worker.conf  supervisord.worker_github.conf  test_meter_credits_fix.py  worker_health.py
server/.claude/: settings.local.json
server/.minio/: configure.sh  github.sh  local.sh  policy.json
server/.zed/: settings.json
server/emails/: .gitignore  .npmrc  .oxfmtrc.json  .prettierrc.json  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.js
server/hack/: production_run_server.sh
server/load_tests/: README.md  __init__.py  config.py  locustfile.py
server/migrations/: README.md  env.py  functions.py  script.py.mako
server/monitoring/: prometheus.yml
server/polar/: __init__.py  _lint_canary.py  api.py  app.py  config.py  context.py  enums.py  event.py  exception_handlers.py  exceptions.py  locker.py  logfire.py  logging.py  middlewares.py  openapi.py  operational_errors.py  postgres.py  posthog.py  rate_limit.py  redis.py  routing.py  sentry.py  signals.py  tasks.py  types.py  typing.py  verify_github_app.py  version.py  visibility.py  worker.py
server/polar_backoffice/: README.md  __main__.py  app.py  db.py  utils.py
server/scripts/: account_payout_schedule.py  anonymous_pledge_migration.py  appeal_review.py  assign_ongoing_review_threads.py  assign_organization_owner.py  backfill_account_platform_fees.py  backfill_amount_v2_billing_entry.py  backfill_amount_v2_checkouts.py  backfill_amount_v2_order_items.py  backfill_amount_v2_orders.py  backfill_amount_v2_payments.py  backfill_amount_v2_product_prices.py  backfill_amount_v2_subscription_product_prices.py  backfill_amount_v2_subscriptions.py  backfill_anchor_day.py  backfill_balance_events.py  backfill_benefit_visibility.py  backfill_blocked_status.py  backfill_chargeback_prevention_setting.py  backfill_close_orphan_appeal_cases.py  backfill_customer_name.py  backfill_event_actors.py  (+176 more)
sidecar/: .gitignore  Dockerfile  README.md  pyproject.toml
(+8890 files in other folders)
