[tool.poetry]
name = "polar-docs"
version = "0.1.0"
description = "Documentation, FAQ & Blog for Polar"
authors = ["Polar Team <support@polar.sh>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.1.17"
mkdocs-awesome-pages-plugin = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
