[project]
name = "polar"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
  "fastapi==0.136.3", # Don't unpin this until https://github.com/open-telemetry/opentelemetry-python-contrib/issues/4699 is resolved
  "uvicorn[standard]>=0.49.0",
  "asyncpg>=0.29.0",
  "alembic>=1.9.2",
  "sqlalchemy[asyncio]>=2.0.50",
  "greenlet>=3.5.1",
  "structlog>=26.1.0",
  "githubkit==0.15.5",
  "redis>=5.0.4",
  "sse-starlette>=3.4.4",
  "stripe>=14,<15",
  "pyjwt>=2.13.0",
  "pydantic>=2.13.4",
  "sentry-sdk[fastapi,sqlalchemy]>=2.62.0",
  "posthog>=7.18.0",
  "python-slugify>=8.0.1",
  "python-multipart>=0.0.32",
  "safe-redirect-url>=0.1.1",
  "httpx-oauth>=0.17.0",
  "httpx>=0.23.0",
  "pydantic-settings>=2.14.1",
  "email-validator>=2.1.0.post1",
  "python-dateutil>=2.9.0.post0",
  "pydantic-extra-types>=2.9.0",
  "sqlalchemy-utils>=0.41.1",
  "authlib>=1.7.2",
  "standardwebhooks>=1.0.0",
  "typer>=0.26.7",
  "logfire[fastapi,httpx,sqlalchemy,redis]>=4.36.0",
  "makefun>=1.15.6",
  "boto3>=1.43.26",
  "itsdangerous>=2.2.0",
  "cryptography>=48.0.1",
  "babel>=2.16.0",
  "pycountry>=24.6.1",
  "python-stdnum>=2.1",
  "ipinfo-db>=0.0.4",
  "taskipy>=1.10.3",
  "psycopg2-binary>=2.9.12",
  "apscheduler>=3.10.4",
  "plain-client>=0.0.3",
  "tagflow>=0.7.0",
  "exponent-server-sdk>=2.1.0",
  "dramatiq[redis,watch]>=1.17.1",
  "prometheus-client>=0.25.0",
  "python-snappy>=0.7.3",
  "fpdf2>=2.8.3",
  "arabic-reshaper>=3.0.1",
  "python-bidi>=0.6.10",
  "pydantic-ai-slim[openai]>=1.106.0",
  "genai-prices>=0.0.66",
  "asgi-ratelimit>=0.10.0",
  "aiocsv>=1.4.1",
  "alembic-utils>=0.8.8",
  "clickhouse-connect[async]>=1.2.0",
  "trafilatura>=2.1.0",
  "firecrawl-py>=4.28.2",
  "polar-sdk==0.31.7",
  "anyio>=4.13.0",
  "markdown-it-py>=4.2.0",
  "tzdata>=2026.2",
  "reauth==0.1.8",
  # Vercel-specific
  "vercel-workers[dramatiq]==0.0.25",
  "vercel==0.5.9",
]

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pytest<10",
  "pytest-sugar>=1.0.0",
  "typer>=0.26.7",
  "coverage>=7.14.1",
  "pytest-mock>=3.10.0",
  "ruff>=0.15.16",
  "pytest-asyncio>=1.4.0",
  "types-redis>=4.6.0.20240903",
  "pytest-subtests>=0.13.1",
  "pytest-recording>=0.13.1",
  "respx>=0.23.1",
  "pytest-cov>=5.0.0",
  "types-python-slugify>=8.0.0.3",
  "types-requests>=2.33.0.20260518",
  "boto3-stubs[s3,sqs,lambda]>=1.43.26",
  "freezegun>=1.5.1",
  "fakeredis[lua]>=2.36.1",
  "pytest-xdist[psutil]>=3.8.0",
  "sqlalchemy-utils>=0.41.2",
  "minio>=7.2.9",
  "locust>=2.44.1",
  "debugpy>=1.8.21",
  "pydantic-evals>=1.103.0",
  "gepa>=0.1.0",
  # Quarantined due to supply chain attack:
  # * https://futuresearch.ai/blog/litellm-pypi-supply-chain-attack/
  # * https://pypi.org/project/litellm/
  # "litellm==1.82.3",
]

[tool.taskipy.tasks]
emails = { cmd = "cd emails && pnpm i --frozen-lockfile && pnpm run build", help = "build emails" }
backoffice = { cmd = "pnpm -C polar/backoffice install --frozen-lockfile && pnpm -C polar/backoffice build", help = "build backoffice CSS and JS" }
api = { cmd = "env AUTHLIB_INSECURE_TRANSPORT=true uvicorn polar.app:app --reload --workers 1 --host 127.0.0.1 --port 8000", help = "run api service" }
worker = { cmd = "dramatiq -p 1 -t 1 --watch polar -f polar.worker.scheduler:start polar.worker.run", help = "run worker" }
test = { cmd = "POLAR_ENV=testing python -m pytest --cov polar/ --cov-report=term-missing", help = "run all tests" }
test_fast = { cmd = "POLAR_ENV=testing python -m pytest -n auto -p no:sugar --no-cov", help = "run all tests, but fast" }
loadtest = { cmd = "locust -f load_tests/locustfile.py --host=http://127.0.0.1:8000", help = "run load tests (interactive)" }
lint = { cmd = "ruff format . && ruff check --fix . && task lint_subquery && task lint_org_scope", help = "run linters with autofix" }
lint_check = { cmd = "ruff format --check . && ruff check . && task lint_subquery && task lint_org_scope", help = "run ruff linter" }
lint_subquery = { cmd = "python scripts/lint_subquery.py", help = "flag .subquery() calls that don't narrow columns" }
lint_org_scope = { cmd = "python scripts/lint_org_scope.py", help = "flag inline UserOrganization filters that bypass select_user_org_ids" }
lint_types = { cmd = "mypy --num-workers 2 polar scripts tests", help = "run mypy type verify" }
db_migrate = { cmd = "python -m scripts.db upgrade", help = "run alembic upgrade" }
db_recreate = { cmd = "python -m scripts.db recreate", help = "drop and recreate database" }
db_reparent = { cmd = "python -m scripts.db reparent", help = "try to auto-fix conflicting migrations" }
tb_deploy = { cmd = "python -m scripts.tinybird", help = "deploy tinybird datasources" }
preview = { cmd = "python -m scripts.preview", help = "manage preview environments" }
clean = { cmd = "find * -name '*.pyc' -delete && find * -name '__pycache__' -delete", help = "clean up .pyc and __pycache__" }
verify_github_app = { cmd = "python -m polar.verify_github_app", help = "verify that the github app is correctly configured" }
generate_dev_jwks = { cmd = "python -m polar.kit.jwk polar_dev > ./.jwks.json", help = "generate a development JWKS file" }
seeds_load = { cmd = "python -m scripts.seeds_load", help = "load sample/test data into the database" }
enable_payments = { cmd = "python -m scripts.enable_payments", help = "enable payments for an organization by slug" }
loadtest_setup = { cmd = "python -m scripts.loadtest_setup", help = "setup load test data for event ingestion" }
pre_deploy = { cmd = "task db_migrate", help = "Pre-deploy command run by Render" }

[tool.pytest.ini_options]
markers = ["auth"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
] # See: https://github.com/nedbat/coveragepy/issues/831

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "I",
  "UP",
  "T20",
  "B039",
  "PT",
  "RUF022",
  "RUF023",
  "RUF10",
  "RUF20",
]
ignore = [
  "F841", # remove unused variables
  "PT012",
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = [
  "F401", # remove unused import
]
"scripts/*" = ["T20"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true
skip_cache_mtime_checks = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false
warn_untyped_fields = true

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { reauth = false, vercel-workers = false } # Reauth is brand new, but remember to remove this exclusion when stabilized

[tool.uv.sources]
dramatiq = { git = "https://github.com/frankie567/dramatiq", rev = "memory-leak-asyncio-ter" }
polar-sdk = { url = "https://files.pythonhosted.org/packages/dc/e0/a88026b9432c7e2c0c096911ddc97cb06f483036a00a8afd5254efe1c16a/polar_sdk-0.31.7-py3-none-any.whl" }
