[project]
name = "polar-sdk"
authors = [{ name = "Polar", email = "contact@polar.sh" }]
license = "MIT"
license-files = ["LICENSE"]
description = "Polar SDK — A billing platform for the intelligence era"
readme = "README.md"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = ["httpx>=0.28.1", "adaptix==3.0.0b12"]

[project.urls]
homepage = "https://polar.sh"
repository = "https://github.com/polarsource/polar/tree/main/sdk/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "polar/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["polar"]

[dependency-groups]
dev = ["ty", "ruff", "pytest"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.uv]
default-groups = ["dev"]
exclude-newer = "1 week"
